--- a/rename.env
+++ b/rename.env
@@ -1,3 +1,7 @@
-VNC_PASSWORD=setup_your_vnc_password
-HTTP_USERNAME=setup_your_username
-HTTP_PASSWORD=setup_your_password
+CUSTOM_USER=
+PASSWORD=
+PUID=1000
+PGID=1000
+TIMEZONE=Asia/Jakarta
+LANG=en_US.UTF-8
+CHROME_CLI=https://google.com/
